@@ -28,6 +28,8 @@ PTXCONF_DEVNODES_I2C=m
 PTXCONF_DEVNODES_MTD=m
 PTXCONF_DEVNODES_MTD_CHAR=m
 PTXCONF_DEVNODES_MTD_BLK=m
+PTXCONF_DEVNODES_UIO=m
+PTXCONF_DEVNODES_UIO_MAJOR=254
 # PTXCONF_DEVNODES_BLK is not set
 
 #
