@@ -1,5 +1,6 @@
 2011-01-16	Stephan Linz <linz@li-pro.net>
 
+	* ptxconfig: expand devnodes for uio device files
 	* common: adapt uio_of_genirq fixes, PVR for Microblaze v8.00.b
 	* common: configure license of devmem2, set to GPL
 
